--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 		<!--these are the draggable pieces -->
 		<div class="puzzle-pieces">
 			<h3 class="hidden">The Drag Zone</h3>
-			<img src="images/topLeft0.jpg" alt="top left" class="puzzle-image">
-			<img src="images/topRight0.jpg" alt="top left" class="puzzle-image">
-			<img src="images/bottomLeft0.jpg" alt="top left" class="puzzle-image">
-			<img src="images/bottomRight0.jpg" alt="top left" class="puzzle-image">
+			<img data-puzzleindex="0" src="images/topLeft0.jpg" alt="top left" class="puzzle-image">
+			<img data-puzzleindex="0" src="images/topRight0.jpg" alt="top right" class="puzzle-image">
+			<img data-puzzleindex="0" src="images/bottomLeft0.jpg" alt="top left" class="puzzle-image">
+			<img data-puzzleindex="0" src="images/bottomRight0.jpg" alt="top left" class="puzzle-image">
 		</div>
 		<!--drop the pieces here -->
 		<div class="puzzle-board">
@@ -33,10 +33,10 @@
 		<p>click thumb to change pieces!</p>
 		<nav id="buttonHolder">
 			<h3 class="hidden">Select Image</h3>
-			<img src="images/buttonZero.jpg" alt="thumbnail">
-			<img src="images/buttonOne.jpg" alt="thumbnail">
-	    	<img src="images/buttonTwo.jpg" alt="thumbnail">
-			<img src="images/buttonThree.jpg" alt="thumbnail">
+			<img data-puzzleindex="0" src="images/buttonZero.jpg" alt="thumbnail">
+			<img data-puzzleindex="1" src="images/buttonOne.jpg" alt="thumbnail">
+	    	<img data-puzzleindex="2" src="images/buttonTwo.jpg" alt="thumbnail">
+			<img data-puzzleindex="3" src="images/buttonThree.jpg" alt="thumbnail">
 		</nav>
 	</footer>
 
